[package]
name = "proxy-signatures"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/jedisct1/rust-proxy-signatures"
repository = "https://github.com/jedisct1/rust-proxy-signatures"
readme = "README.md"
author = "Frank Denis <github@pureftpd.org>"

[dependencies]
libsodium-rs = "0.2.1"
ct-codecs = { version = "1.1", features = ["std"] }
